crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_client_thread.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
18 00 00 00 12 01 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 01 01 07 14 10
