crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_uni_thread.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
12 00 00 00 03 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 74 17
