crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_worker_authors.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
assertion_line: 44
expression: hex(&bytes)
---
89 00 00 00 1e 00 1d 2f 55 73 65 72 73 2f 6d 69
72 61 2f 61 74 6c 61 73 2f 73 72 63 2f 61 75 74
68 2e 72 73 01 e0 fb 73 01 28 33 62 31 38 65 35
31 32 64 62 61 37 39 65 34 63 38 33 30 30 64 64
30 38 61 65 62 33 37 66 38 65 37 32 38 62 38 64
61 64 02 04 03 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 74 17 01 02 00 c0 df 72 0c 01 10 00
00 00 00 00 00 00 00 00 00 00 00 00 00 74 17 00
01 07 39 64 31 65 37 61 61 a0 e1 67 00
