crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_worker_intent_done.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
13 00 00 00 19 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 01
