crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_worker_sessions.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
6f 00 00 00 1b 01 05 63 6f 64 65 78 01 05 2f 77
6f 72 6b 00 01 05 63 6f 64 65 78 09 30 31 39 61
2d 63 30 64 65 01 05 2f 77 6f 72 6b 01 0d 46 69
78 20 74 68 65 20 62 75 69 6c 64 01 a0 e1 67 01
10 00 00 00 00 00 00 00 00 00 00 00 00 00 00 74
17 02 06 72 65 73 75 6d 65 09 30 31 39 61 2d 63
30 64 65 01 06 62 72 61 6e 63 68 04 6d 61 69 6e
00 00 00
