crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_worker_sessions_absent.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
20 00 00 00 1b 02 70 69 05 2f 77 6f 72 6b 00 01
13 70 69 20 69 73 20 6e 6f 74 20 69 6e 73 74 61
6c 6c 65 64
