crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_worker_sessions_found.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
b0 00 00 00 18 00 00 0b 66 6c 61 6b 79 20 6c 6f
67 69 6e 01 0b 63 6c 61 75 64 65 2d 63 6f 64 65
07 35 66 30 63 2d 31 64 01 05 2f 77 6f 72 6b 01
0a 4c 6f 6f 6b 20 61 74 20 43 49 01 c0 ee 6d 00
02 08 2d 2d 72 65 73 75 6d 65 07 35 66 30 63 2d
31 64 00 01 18 66 69 78 20 74 68 65 20 66 6c 61
6b 79 20 6c 6f 67 69 6e 20 74 65 73 74 02 08 0d
0e 13 00 01 01 b0 a0 6d 00 01 39 43 6c 61 75 64
65 20 43 6f 64 65 27 73 20 70 72 6f 6d 70 74 20
68 69 73 74 6f 72 79 20 69 73 20 72 65 61 64 20
66 72 6f 6d 20 69 74 73 20 6c 61 73 74 20 36 34
20 4d 69 42
