crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__link_worker_thread_hits.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
54 00 00 00 1c 0b 66 6c 61 6b 79 20 6c 6f 67 69
6e 01 10 00 00 00 00 00 00 00 00 00 00 00 00 00
00 74 17 01 05 6d 73 67 2d 34 03 05 61 67 65 6e
74 1a 54 68 65 20 66 6c 61 6b 79 20 6c 6f 67 69
6e 20 74 65 73 74 20 72 61 63 65 73 02 04 09 0a
0f 01 00 90 f5 70 02 01
