crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__outcome_done.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
12 00 00 00 10 00 00 00 00 00 00 00 00 00 00 00
00 00 00 01 e7 00
